# bigs-school-backend

./: .env  README.md  pyproject.toml
app/: database.py  main.py
app/models/: academic_year.py  class_model.py  division.py  student_enrollment.py  user.py
app/repositories/: student_repo.py
app/routes/: student_route.py
app/schemas/: student_schema.py
app/services/: student_service.py
